--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "cannon": "^0.6.2",
+    "keycode": "^2.1.8",
     "three.js": "^0.77.1"
   },
   "devDependencies": {
